--- a/app/src/main/res/layout/activity_implicit_intent.xml
+++ b/app/src/main/res/layout/activity_implicit_intent.xml
@@ -3,16 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_gravity="center"
     tools:context=".Activity.ImplicitIntentActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center">
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/callIntent"
@@ -22,15 +17,15 @@
             android:background="@color/teal_200"
             android:layout_margin="11dp"/>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/messageIntent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Message"
-            android:background="@color/teal_200"
-            android:layout_margin="11dp"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/messageIntent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="11dp"
+        android:background="@color/teal_200"
+        android:text="Message" />
 
-        <androidx.appcompat.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/emailIntent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,5 +40,4 @@
             android:text="Share"
             android:background="@color/teal_200"
             android:layout_margin="11dp"/>
-    </LinearLayout>
 </LinearLayout>
