--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -173,4 +173,21 @@
         app:layout_constraintStart_toEndOf="@+id/navigation_drawer"
         app:layout_constraintTop_toBottomOf="@+id/dataPassFrag" />
 
+    <Button
+        android:id="@+id/api_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="Get Api"
+        app:layout_constraintStart_toEndOf="@+id/map_button"
+        app:layout_constraintTop_toBottomOf="@+id/dataPassFrag" />
+
+    <Button
+        android:id="@+id/postApiBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Post Api"
+        app:layout_constraintStart_toStartOf="@+id/navigation_drawer"
+        app:layout_constraintTop_toBottomOf="@+id/navigation_drawer" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
