--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -190,4 +190,13 @@
         app:layout_constraintStart_toStartOf="@+id/navigation_drawer"
         app:layout_constraintTop_toBottomOf="@+id/navigation_drawer" />
 
+    <Button
+        android:id="@+id/getCurrentLocationBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="CurrentLocation"
+        app:layout_constraintStart_toEndOf="@+id/postApiBtn"
+        app:layout_constraintTop_toBottomOf="@+id/navigation_drawer" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
