Location Services implement

--- a/app/src/main/res/layout/activity_get_location.xml
+++ b/app/src/main/res/layout/activity_get_location.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.GetLocationActivity">
+    tools:context=".Services.GetLocationActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -89,4 +89,12 @@
         android:textColor="@color/black"
         android:layout_marginStart="10dp"
         android:id="@+id/longitude"/>
+
+    <Button
+        android:id="@+id/stopLocationBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/getLocationBtn"
+        android:layout_centerHorizontal="true"
+        android:text="Stop Location" />
 </RelativeLayout>
