--- a/app/src/main/res/layout/activity_get_location.xml
+++ b/app/src/main/res/layout/activity_get_location.xml
@@ -16,18 +16,6 @@
         android:textColor="@color/black"
         android:id="@+id/location"/>
     
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="Get Location"
-        android:layout_marginBottom="50dp"
-        android:layout_centerInParent="true"
-        android:textColor="@color/white"
-        android:backgroundTint="@color/purple_500"
-        android:textSize="22sp"
-        android:id="@+id/getLocationBtn"/>
-    
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -90,11 +78,32 @@
         android:layout_marginStart="10dp"
         android:id="@+id/longitude"/>
 
-    <Button
-        android:id="@+id/stopLocationBtn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/BtnLinearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/getLocationBtn"
-        android:layout_centerHorizontal="true"
-        android:text="Stop Location" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/stopLocationBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="gone"
+            android:backgroundTint="@color/purple_500"
+            android:text="Stop Location"
+            android:textColor="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/getLocationBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:visibility="gone"
+            android:backgroundTint="@color/purple_500"
+            android:text="Get Location"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
 </RelativeLayout>
